fix: Color of splash in dark mode

--- a/src/components/homepage/splash/splash.scss
+++ b/src/components/homepage/splash/splash.scss
@@ -188,4 +188,8 @@ div.splash {
   div.details {
     background-color: $oc-gray-8;
   }
+  div.extra a,
+  div.extra svg {
+    color: $oc-pink-4;
+  }
 }
